# coursework_3

./: .gitignore  main.py  pyproject.toml
tests/: test.json  test_utils.py
utils/: utils.py
