[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["maverino <maverino@vk.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
